**  denotes quite substantial/important changes
*** denotes really big changes 

1.7-28

* ldTweedie now returns derivatives w.r.t. p as well as w.r.t scale 
  parameter phi.

* gamm can now handle 'varComb' variance functions (thanks Sven Neulinger
  for reporting that it didn't).

* fix of a bug which could cause bam to seg fault for a model with no smooths 
  (insufficient storage allocated in C in this case). Thanks Martijn Weiling.

1.7-27

* Further multi-threading in gam fits - final two leading order matrix
  operations parallelized using openMP. 

* Export of smooth.construct.t2.smooth.spec and Predict.matrix.t2.smooth, 
  and Rrank.

* Fix of of missing [,,drop=FALSE] in predict.gam that could cause problems 
  with single row prediction when 'terms' supplied (thanks Yang Yang).

1.7-26

* Namespace fixes.

1.7-25

* code added to allow openMP based multi-threading in gam fits (see
  ?gam.control and ?"mgcv-parallel"). 

* bam now allows AR1 error model to be split blockwise. See argument 
  'AR.start'.

* magic.post.proc made more efficient (one of two O(np^2) steps removed).

* var.summary now coerces character to factor. 

* bugs fixed whereby etastart etc were not passed to initial.spg and
  get.null.coefs. Thanks to Gavin Simpson.

* reformulate removed from predict.gam to avoid (slow) repeated parser 
  calls.

* gaussian(link="log") initialization fixed so that negative data 
  does not make it fail, via fix.family patching function.

* bug fix in plot method for "fs" basis - ignored any side conditions.
  Thanks to Martijn Weiling and Jacolien van Rij.

* gamm now checks whether smooths nested in factors have illegal side 
  conditions, and halts if so (re-ordering formula can help).
 
* anova.glmlist no longer called.

* Compiled code now uses R_chck_calloc and R_chk_free for memory management
  to avoid the possibility of unfriendly exit on running out of memory. 

* fix in gam.side which would fail with unpenalized interactions in the 